--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~11.1.2",
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
+    "@ngrx/effects": "^11.0.0",
     "@ngrx/store": "^11.0.0",
     "@ngrx/store-devtools": "^11.0.0",
-    "rxjs": "~6.6.0",
+    "ngrx-forms": "^6.3.4",
+    "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
